Add basic styling of the page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 </head>
 
 <body>
+    <header>
+        Tic-Tac-Toe
+    </header>
 
+    <main>
+
+    </main>
+
+    <footer>
+        Made by <a href="https://github.com/UwU-37586109292">Zuzka</a> 2022
+    </footer>
 </body>
 
 </html>
