--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
     </header>
 
     <main>
-
+        <div class="gameboard grid grid-gap">
+            <div class="board-field" id="0">X</div>
+            <div class="board-field" id="1"></div>
+            <div class="board-field" id="2"></div>
+            <div class="board-field" id="3">O</div>
+            <div class="board-field" id="4"></div>
+            <div class="board-field" id="5"></div>
+            <div class="board-field" id="6"></div>
+            <div class="board-field" id="7"></div>
+            <div class="board-field" id="8"></div>
+        </div>
     </main>
 
     <footer>
