Handle click on the board - X added to field

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <main>
         <div class="gameboard grid grid-gap">
-            <div class="board-field" id="0">X</div>
+            <div class="board-field" id="0"></div>
             <div class="board-field" id="1"></div>
             <div class="board-field" id="2"></div>
-            <div class="board-field" id="3">O</div>
+            <div class="board-field" id="3"></div>
             <div class="board-field" id="4"></div>
             <div class="board-field" id="5"></div>
             <div class="board-field" id="6"></div>
