--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
     </header>
 
     <main>
+        <div class="players">
+            <div class="player-info-1">
+                <div class="player-name"></div>
+                <div class="player-symbol"></div>
+                <div class="player-score"></div>
+            </div>
+            <div class="player-info-2">
+                <div class="player-name"></div>
+                <div class="player-symbol"></div>
+                <div class="player-score"></div>
+            </div>
+        </div>
+        <div class="current-turn"></div>
+
         <div class="gameboard grid grid-gap">
             <div class="board-field" id="0"></div>
             <div class="board-field" id="1"></div>
