--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
         </div>
 
         <div class="ask-name">
-            <form id="name-form" onsubmit="game.handlePlayerNameSubmit(event, name.value)">
-                <label for="name">Tell me your name*:</label>
-                <input type="text" name="name" id="name" required>
-                <button type="submit">That's it!</button>
+            <form class="flex column" id="name-form" onsubmit="game.handlePlayerNameSubmit(event, name.value)">
+                <div class="flex">
+                    <label for="name">Tell me your name*:</label>
+                    <input type="text" name="name" id="name" required>
+                </div>
+                <div class="flex">
+                    <button type="submit">That's it!</button>
+                    <button type="button" onclick="game.handlePlayerNameSubmit(event, 'Jeff')">Just call me
+                        Jeff</button>
+                </div>
             </form>
         </div>
     </main>
