--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
 
         <div class="ask-name">
-            <form class="flex column" id="name-form" onsubmit="game.handlePlayerNameSubmit(event, name.value)">
+            <form class="flex column" id="name-form" action="./game.js">
                 <div class="flex">
                     <label for="name">Tell me your name*:</label>
                     <input type="text" name="name" id="name" required>
                 </div>
                 <div class="flex">
                     <button type="submit">That's it!</button>
-                    <button type="button" onclick="game.handlePlayerNameSubmit(event, 'Jeff')">Just call me
+                    <button type="button">Just call me
                         Jeff</button>
                 </div>
             </form>
