Add Option to play as 1 player

--- a/index.html
+++ b/index.html
@@ -42,8 +42,20 @@
             <div class="board-field" id="8"></div>
         </div>
 
-        <div class="ask-name">
-            <form class="flex column" id="name-form">
+        <!-- Select game mode modal -->
+        <div class="modal game-mode">
+            <div class="modal-content">
+                <p>Select game mode:</p>
+                <div class="flex">
+                    <button id="single-player">1 player</button>
+                    <button id="versus">2 players</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Get player name modal -->
+        <div class="ask-name modal" id="name-modal">
+            <form class="modal-content flex column" id="name-form">
                 <div class="flex">
                     <label for="name">Tell me your name*:</label>
                     <input type="text" name="name" id="name" required>
