--- a/index.html
+++ b/index.html
@@ -56,9 +56,15 @@
         <!-- Get player name modal -->
         <div class="ask-name modal" id="name-modal">
             <form class="modal-content flex column" id="name-form">
-                <div class="flex">
-                    <label for="name">Tell me your name*:</label>
-                    <input type="text" name="name" id="name" required>
+                <div class="flex column">
+                    <div class="flex" id="player-1-input">
+                        <label for="name-1" id="2-players-label-1">Name of player 1*:</label>
+                        <input type="text" name="name-1" id="name-1" required>
+                    </div>
+                    <div class="flex" id="player-2-input">
+                        <label for="name-2" id="2-players-label-2">Name of player 2*:</label>
+                        <input type="text" name="name-2" id="name-2" required>
+                    </div>
                 </div>
                 <div class="flex">
                     <button type="submit">That's it!</button>
