Add reset game button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <div class="board-field" id="7"></div>
             <div class="board-field" id="8"></div>
         </div>
+        <div class="controls">
+            <button class="reset">Reset game</button>
+        </div>
 
         <!-- Select game mode modal -->
         <div class="modal game-mode">
