--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div class="current-turn"></div>
 
         <div class="gameboard grid grid-gap">
-            <div class="board-field" id="0"></div>
-            <div class="board-field" id="1"></div>
-            <div class="board-field" id="2"></div>
-            <div class="board-field" id="3"></div>
-            <div class="board-field" id="4"></div>
-            <div class="board-field" id="5"></div>
-            <div class="board-field" id="6"></div>
-            <div class="board-field" id="7"></div>
+            <div class="board-field border-right border-bottom" id="0"></div>
+            <div class="board-field border-right border-bottom" id="1"></div>
+            <div class="board-field border-bottom" id="2"></div>
+            <div class="board-field border-right border-bottom" id="3"></div>
+            <div class="board-field border-right border-bottom" id="4"></div>
+            <div class="board-field border-bottom" id="5"></div>
+            <div class="board-field border-right" id="6"></div>
+            <div class="board-field border-right" id="7"></div>
             <div class="board-field" id="8"></div>
         </div>
         <div class="controls">
