--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="flex">
                     <button type="submit">That's it!</button>
                     <button type="button" id="default-name">Just call me
-                        Jeff</button>
+                        Hibiki</button>
                 </div>
             </form>
         </div>
