Add katana to indivate active player

--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
                 <div class="player-symbol"></div>
                 <div class="player-score"></div>
             </div>
+            <div class="pointer">
+                <img src="./assets/katana.svg" alt="turn indicator">
+            </div>
             <div class="player-info-2">
                 <div class="player-name"></div>
                 <div class="player-symbol"></div>
                 <div class="player-score"></div>
             </div>
         </div>
-        <div class="current-turn"></div>
 
         <div class="gameboard grid grid-gap">
             <div class="board-field border-right border-bottom" id="0"></div>
