Add konoha symbol to indicate player score

--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
             <div class="player-info-1">
                 <div class="player-name"></div>
                 <div class="player-symbol"></div>
-                <div class="player-score"></div>
+                <div class="wins"></div>
             </div>
-            <div class="pointer">
-                <img src="./assets/katana.svg" alt="turn indicator">
-            </div>
+            <img src="./assets/katana.svg" alt="turn indicator" id="katana">
             <div class="player-info-2">
                 <div class="player-name"></div>
                 <div class="player-symbol"></div>
-                <div class="player-score"></div>
+                <div class="wins"></div>
             </div>
         </div>
 
