Remove colon on greeting popup

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- Select game mode modal -->
         <div class="modal game-mode">
             <div class="modal-content">
-                <p>Select game mode:</p>
+                <p>Select game mode</p>
                 <div class="flex">
                     <button id="single-player">1 player</button>
                     <button id="versus">2 players</button>
