New modal to show winner

--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
                 </div>
             </form>
         </div>
+
+        <!-- Winner modal -->
+        <div class="modal winner">
+            <div class="modal-content">
+                <p></p>
+                <div class="flex space-around">
+                    <button id="btnNew">New game</button>
+                    <button id="btnClose">Close</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
