Add animation to indicate the round winner

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="wins"></div>
             </div>
         </div>
+        <div class="round-winner"></div>
 
         <div class="gameboard grid grid-gap">
             <div class="board-field border-right border-bottom" id="0"></div>
