Some fixes related to font display

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="modal-content">
                 <p>Select game mode</p>
                 <div class="flex">
-                    <button id="single-player">1 player</button>
-                    <button id="versus">2 players</button>
+                    <button id="single-player">Solo</button>
+                    <button id="versus">Versus</button>
                 </div>
             </div>
         </div>
@@ -62,11 +62,13 @@
             <form class="modal-content flex column" id="name-form">
                 <div class="flex column">
                     <div class="flex" id="player-1-input">
-                        <label for="name-1" id="2-players-label-1">Name of player 1*:</label>
+                        <label for="name-1" id="2-players-label-1">Name of player 1<span
+                                class="required">*</span>:</label>
                         <input type="text" name="name-1" id="name-1" required>
                     </div>
                     <div class="flex" id="player-2-input">
-                        <label for="name-2" id="2-players-label-2">Name of player 2*:</label>
+                        <label for="name-2" id="2-players-label-2">Name of player 2<span
+                                class="required">*</span>:</label>
                         <input type="text" name="name-2" id="name-2" required>
                     </div>
                 </div>
