Add confirmation modal after reset button click

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
                 </div>
             </div>
         </div>
+
+        <!-- Reset game modal -->
+        <div class="modal reset">
+            <div class="modal-content">
+                <p>Are you sure you want to start over?</p>
+                <div class="flex space-around">
+                    <button id="btnConfirmReset">Reset</button>
+                    <button id="btnCloseReset">Cancel</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
