--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     <div class="flex" id="player-1-input">
                         <label for="name-1" id="2-players-label-1">Name of player 1<span
                                 class="required">*</span>:</label>
-                        <input type="text" name="name-1" id="name-1" required>
+                        <input type="text" name="name-1" id="name-1" aria-required="true">
                     </div>
                     <div class="flex" id="player-2-input">
                         <label for="name-2" id="2-players-label-2">Name of player 2<span
                                 class="required">*</span>:</label>
-                        <input type="text" name="name-2" id="name-2" required>
+                        <input type="text" name="name-2" id="name-2" aria-required="true">
                     </div>
                 </div>
                 <div class="flex">
